--- a/2.html
+++ b/2.html
@@ -50,8 +50,8 @@
     getProductMarkup() {
       return `
         <div class="product">
-            <div>${name}</div>
-            <img src="${imageUrl}" alt="">
+            <div>${this.name}</div>
+            <img src="${this.imageUrl}" alt="">
             <div>Цена: <span>${price}</span> р.</div>
             <a href="https://example.com/producs/${id}">Подробнее</a>
         </div>
