--- a/2.html
+++ b/2.html
@@ -52,8 +52,8 @@
         <div class="product">
             <div>${this.name}</div>
             <img src="${this.imageUrl}" alt="">
-            <div>Цена: <span>${price}</span> р.</div>
-            <a href="https://example.com/producs/${id}">Подробнее</a>
+            <div>Цена: <span> ${this.price} </span> р.</div>
+            <a href="https://example.com/producs/${this.id}">Подробнее</a>
         </div>
       `;
     }
@@ -90,7 +90,7 @@
     const targetProducts = products[event.target.getAttribute('data-type')];
     for (const el of targetProducts) {
       console.log(el);
-      el.getProductMarkup();
+      productsEl.innerHTML += el.getProductMarkup();
     }
     
   });
